Fixed spelling errors, repeapted text, and left-aligned text on project section.

--- a/assets/css/myCustom.css
+++ b/assets/css/myCustom.css
@@ -67,3 +67,7 @@
 #footer h2{
 	font-size: 30px;
 }
+
+#projects p, #projects li{
+	text-align: left;
+}
